docs: add documentation for List all Cattles
